# imgshare

./: Cargo.toml  Dockerfile
assets/: styles.css  upload.js
migrations/: 20230616104224_init.down.sql  20230616104224_init.up.sql
src/: config.rs  handler.rs  jwt_auth.rs  main.rs  model.rs  response.rs  route.rs
src/handler/: login.rs  logout.rs  mod.rs  register.rs  upload.rs
src/layers/: mod.rs
src/methods/: base.rs  dashboard.rs  index.rs  mod.rs  register.rs  signin.rs  upload.rs
templates/: alreadysignedin.html  base.html  dashboard.html  index.html  register.html  signin.html  upload.html
