[package]
name = "imgshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.0"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum ={ version="0.6.18", features=["tracing","headers"]}
axum-extra = { version = "0.7.4", features = ["cookie"] }
axum_typed_multipart = "0.4.0"
bytes = "1.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
color-eyre = "0.6.2"
dotenv = "0.15.0"
image = { version = "0.24.6", features = ["webp-encoder"] }
jsonwebtoken = "8.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
time = "0.3.22"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors","trace", "fs","normalize-path"] }
tower-layer = "0.3.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }
